# unstoppable

./: .gitignore  AGENTS.md  AGENTS_WORKFLOW.md  APPLE_AUTH_PLAN.md  GOOGLE_AUTH_PLAN.md  PAYMENTS_PLAN.md  README.md  START_AGENT_SESSION.md
Unstoppable/: GoogleService-Info.plist  HomeView.swift  Info.plist  NicknameView.swift  ProfileView.swift  RoutineCreationView 2.swift  RoutineCreationView.swift  RoutineTimerView.swift  StreakManager.swift  UnstoppableApp.swift  WelcomeView.swift
Unstoppable.xcodeproj/: project.pbxproj
UnstoppableUITests/: WelcomeToSignOutUITests.swift
agent_logs/: APPLE_AUTH_FIREBASE_ROLLOUT_20260221.md  AUTH_BOOTSTRAP_PROFILE_SYNC_HARDENING_20260221.md  GOOGLE_SIGNIN_BUNDLE_ID_ALIGNMENT_20260217.md  PAYMENTOPTION_SINGLE_SOURCE_ROUTING_AND_SIM_LAUNCH_GUARDRAILS_20260222.md  PAYMENTS_FAKE_SUBSCRIPTION_AND_CANONICAL_PAYMENT_OPTION_20260221.md  PAYMENTS_PLAN_20260213.md  REVENUECAT_EMAIL_SYNC_20260222.md  REVENUECAT_OFFERINGS_BLOCKER_AND_PAYWALL_RETRY_20260221.md  REVENUECAT_PAYMENTS_ROLLOUT_STATUS_20260217.md  SIMULATOR_LAUNCH_20260212.md  __AGENT_INDEX.md
backend/: IMPLEMENTATION_PLAN.md
backend/api/: API_RUNBOOK.md  Dockerfile  README.md  deploy_cloud_run.sh  pyproject.toml  requirements.txt
backend/api/scripts/: check_user_payments.py  migrate_payment_option_to_subscription.py  reset_user_onboarding.py  reset_user_payments.py  reset_user_profile.py
backend/api/src/: app.py
codex_logs/: PAYMENTS_PLAN_20260213.md  SIMULATOR_LAUNCH_20260212.md  __CODEX_INDEX.md
prompts/: FEATURE_DO_IT_NOW_VIEW.md  FEATURE_PROFILE_VIEW.md  (+1 more)
(+74 files in other folders)
