[project]
name = "unstoppable-api"
version = "0.1.0"
description = "Unstoppable backend API"
authors = [
    {name = "Luis Galvez",email = "lx.galvez@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "Flask==3.0.3",
    "gunicorn==22.0.0",
    "firebase-admin==6.6.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
